--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Paweł Jeziorowski - portfolio</title>
     <link href="./index.css" type="text/css" rel="stylesheet">
 </head>
 
 <body class="bg-gradient-to-r from-blue-950 via-amber-950 to-blue-950 bg-repeat-x">
-    <section class="flex flex-row justify-between px-16 py-6 max-xl:px-4 max-xl:py-6">
+    <section class="flex flex-row justify-between items-center px-16 py-6 max-w-maxW mx-auto max-xl:px-4 max-xl:py-6 ">
         <content class="flex flex-row items-center gap-4">
             <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path class="fill-lime-500" fill-rule="evenodd" clip-rule="evenodd"
@@ -43,8 +43,7 @@
                     href="#contact"> Contact </a></button>
         </content>
     </section>
-    <section id="about"
-        class="flex flex-row justify-between items-center px-16 py-32 max-xl:flex-col max-xl:px-4 max-xl:py-1">
+    <section id="about" class="flex flex-row justify-between items-center px-16 py-32 max-w-maxW mx-auto max-xl:flex-col max-xl:px-4 max-xl:py-1 ">
         <content class="h-80 flex flex-col max-xl:order-5 max-xl:h-96">
             <div class="mb-16 max-xl:mb-4">
                 <h1
@@ -89,7 +88,7 @@
             class="w-96 h-96 rounded-2xl rounded-tr-200 max-xl:px-4 max-xl:py-4 max-xl:w-72 max-xl:h-72">
 
     </section>
-    <section id="skills" class="flex-row justify-between px-16 py-32 max-xl:px-4 max-xl:pb-4 max-xl:pt-40 ">
+    <section id="skills" class="flex-row justify-between items-center px-16 py-32 max-w-maxW mx-auto max-xl:px-4 max-xl:pb-4 max-xl:pt-40 ">
 
         <div class="mb-20 flex flex-col max-xl:items-center max-xl:mb-5">
             <p class="w-48 h-6 text-xl text-gray-400 font-bold ">MY SKILLS</p>
@@ -188,19 +187,19 @@
 
 
     </section>
-    <section id="projects" class="flex-row justify-between  px-16 py-32 max-xl:px-4 max-xl:py-4">
-        <div class="mb-20 flex flex-col max-xl:items-center max-xl:mb-5">
+    <section id="projects" class="flex-row justify-between items-center px-2 py-32 max-w-maxW mx-auto max-xl:px-4 max-xl:py-4 ">
+        <div class="mb-20 flex flex-col justify-between max-xl:items-center max-xl:mb-5">
             <p class="w-48 h-6 text-xl text-gray-400 font-bold max-xl:text-xl max-xl:w-72">RECENT PROJECTS</p>
             <p class="w-54rem text-4xl text-white mb-20 max-xl:mb-5 max-xl:text-2xl max-xl:w-72">Since diving into
                 frontend development in 2023, I've brought a
                 range of projects to life. Here's a snapshot of my accomplishments so far.</p>
-            <div class=" grid grid-cols-2 gap-4 place-items-start max-xl:grid-cols-1 repo--js">
+            <div class=" grid grid-cols-2 gap-4 place-items-start max-xl:justify-center max-xl:items-center max-xl:grid-cols-1 repo--js">
                 
             </div>
         </div>
 
     </section>
-    <section class="flex-row justify-between  px-16 py-32 max-xl:px-4 max-xl:py-4" id="resume">
+    <section id="resume" class="flex-row justify-between items-center px-16 py-32 max-w-maxW mx-auto max-xl:px-4 max-xl:py-4 " >
         <div class="mb-20 flex flex-col max-xl:items-center max-xl:mb-5">
             <p class="w-48 h-6 text-xl text-gray-400 font-bold ">AFTER HOURS</p>
             <p class="w-54rem text-4xl text-white mb-20 max-xl:mb-5 max-xl:text-2xl max-xl:w-72">Outside of my regular
@@ -236,7 +235,7 @@
         </div>
 
     </section>
-    <section id="contact" class="flex-row justify-between px-16 py-32 max-xl:px-4 max-xl:py-4">
+    <section id="contact" class="flex-row justify-between items-center px-16 py-32 max-w-maxW mx-auto max-xl:px-4 max-xl:py-4 ">
         <div class="flex flex-col items-center">
             <p class="text-white font-bold text-4xl mb-4 max-xl:text-3xl">Let's work together</p>
             <p class="text-gray-400 text-2xl max-xl:text-base">I'm open for new opportunities. </p>
