--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
                     href="#contact"> Contact </a></button>
         </content>
     </section>
-    <section id="about" class="flex flex-row justify-between items-center px-16 py-32 max-w-maxW mx-auto max-xl:flex-col max-xl:px-4 max-xl:py-1 ">
+    <section id="about" class="flex flex-row justify-between items-center px-16 py-16 max-w-maxW mx-auto max-xl:flex-col max-xl:px-4 max-xl:py-1 ">
         <content class="h-80 flex flex-col max-xl:order-5 max-xl:h-96">
             <div class="mb-16 max-xl:mb-4">
                 <h1
@@ -88,7 +88,7 @@
             class="w-96 h-96 rounded-2xl rounded-tr-200 max-xl:px-4 max-xl:py-4 max-xl:w-72 max-xl:h-72">
 
     </section>
-    <section id="skills" class="flex-row justify-between items-center px-16 py-32 max-w-maxW mx-auto max-xl:px-4 max-xl:pb-4 max-xl:pt-40 ">
+    <section id="skills" class="flex-row justify-between items-center px-16 py-16 max-w-maxW mx-auto max-xl:px-4 max-xl:pb-4 max-xl:pt-40 ">
 
         <div class="mb-20 flex flex-col max-xl:items-center max-xl:mb-5">
             <p class="w-48 h-6 text-xl text-gray-400 font-bold ">MY SKILLS</p>
@@ -187,7 +187,7 @@
 
 
     </section>
-    <section id="projects" class="flex-row justify-between items-center px-2 py-32 max-w-maxW mx-auto max-xl:px-4 max-xl:py-4 ">
+    <section id="projects" class="flex-row justify-between items-center px-2 py-16 m-auto max-w-maxW mx-auto max-xl:px-4 max-xl:py-4 ">
         <div class="mb-20 flex flex-col justify-between max-xl:items-center max-xl:mb-5">
             <p class="w-48 h-6 text-xl text-gray-400 font-bold max-xl:text-xl max-xl:w-72">RECENT PROJECTS</p>
             <p class="w-54rem text-4xl text-white mb-20 max-xl:mb-5 max-xl:text-2xl max-xl:w-72">Since diving into
@@ -199,7 +199,7 @@
         </div>
 
     </section>
-    <section id="resume" class="flex-row justify-between items-center px-16 py-32 max-w-maxW mx-auto max-xl:px-4 max-xl:py-4 " >
+    <section id="resume" class="flex-row justify-between items-center px-16 py-16 max-w-maxW mx-auto max-xl:px-4 max-xl:py-4 " >
         <div class="mb-20 flex flex-col max-xl:items-center max-xl:mb-5">
             <p class="w-48 h-6 text-xl text-gray-400 font-bold ">AFTER HOURS</p>
             <p class="w-54rem text-4xl text-white mb-20 max-xl:mb-5 max-xl:text-2xl max-xl:w-72">Outside of my regular
@@ -235,7 +235,7 @@
         </div>
 
     </section>
-    <section id="contact" class="flex-row justify-between items-center px-16 py-32 max-w-maxW mx-auto max-xl:px-4 max-xl:py-4 ">
+    <section id="contact" class="flex-row justify-between items-center px-16 py-16 max-w-maxW mx-auto max-xl:px-4 max-xl:py-4 ">
         <div class="flex flex-col items-center">
             <p class="text-white font-bold text-4xl mb-4 max-xl:text-3xl">Let's work together</p>
             <p class="text-gray-400 text-2xl max-xl:text-base">I'm open for new opportunities. </p>
