--- a/src/index.html
+++ b/src/index.html
@@ -187,7 +187,7 @@
 
 
     </section>
-    <section id="projects" class="flex-row justify-between items-center px-2 py-16 m-auto max-w-maxW mx-auto max-xl:px-4 max-xl:py-4 ">
+    <section id="projects" class="flex-row justify-between items-center px-2 py-16 max-w-maxW mx-auto max-xl:px-4 max-xl:py-4 ">
         <div class="mb-20 flex flex-col justify-between max-xl:items-center max-xl:mb-5">
             <p class="w-48 h-6 text-xl text-gray-400 font-bold max-xl:text-xl max-xl:w-72">RECENT PROJECTS</p>
             <p class="w-54rem text-4xl text-white mb-20 max-xl:mb-5 max-xl:text-2xl max-xl:w-72">Since diving into
@@ -242,9 +242,9 @@
             <p class="text-gray-400 text-2xl mb-16 max-xl:text-base max-xl:mb-10">If you have one for me we should talk!
             </p>
             <button id="mail"
-                class=" p-4 text-xl bg-lime-500 hover:bg-lime-700 duration-500 text-black font-bold rounded-2xl flex flex-row gap-1 place-content-center items-center mb-20 max-xl:mb-10 mail--js">
+                class=" p-4 text-xl bg-lime-500 hover:bg-lime-700 duration-500 text-black font-bold rounded-2xl flex flex-row  gap-1 place-content-center items-center mb-10 max-xl:mb-10 mail--js">
                 <a href="mailto:jeziorowski.pawel.pj@gmail.com">
-                    <div class="flex flex-row gap-2">
+                    <div class="flex flex-row items-center flex-wrap justify-center gap-2">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M2 7L10.1649 12.7154C10.8261 13.1783 11.1567 13.4097 11.5163 13.4993C11.8339 13.5785 12.1661 13.5785 12.4837 13.4993C12.8433 13.4097 13.1739 13.1783 13.8351 12.7154L22 7M6.8 20H17.2C18.8802 20 19.7202 20 20.362 19.673C20.9265 19.3854 21.3854 18.9265 21.673 18.362C22 17.7202 22 16.8802 22 15.2V8.8C22 7.11984 22 6.27976 21.673 5.63803C21.3854 5.07354 20.9265 4.6146 20.362 4.32698C19.7202 4 18.8802 4 17.2 4H6.8C5.11984 4 4.27976 4 3.63803 4.32698C3.07354 4.6146 2.6146 5.07354 2.32698 5.63803C2 6.27976 2 7.11984 2 8.8V15.2C2 16.8802 2 17.7202 2.32698 18.362C2.6146 18.9265 3.07354 19.3854 3.63803 19.673C4.27976 20 5.11984 20 6.8 20Z"
