--- a/src/index.html
+++ b/src/index.html
@@ -8,30 +8,30 @@
     <link href="./index.css" type="text/css" rel="stylesheet">
 </head>
 
-<body class="bg-gradient-to-r from-blue-950 via-amber-950 to-blue-950 bg-repeat-x">
-    <section class="flex flex-row justify-between items-center px-16 py-6 max-w-maxW mx-auto max-xl:px-4 max-xl:py-6 ">
+<body class="bg-gradient-to-r from-blue-950 max-w-90rem via-amber-950 to-blue-950 bg-repeat-x">
+    <section class="flex flex-row justify-between items-center py-6 max-w-maxW mx-auto max-xl:px-4 max-xl:py-6 ">
         <content class="flex flex-row items-center gap-4">
-            <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg width="40" height="40" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path class="fill-lime-500" fill-rule="evenodd" clip-rule="evenodd"
                     d="M20.8895 0.500555C20.8898 0.224413 20.6662 0.000307053 20.39 0C20.1139 -0.000306427 19.8898 0.223302 19.8895 0.499445L19.8718 16.386L16.0745 0.914146C16.0087 0.645962 15.7379 0.481916 15.4697 0.547737C15.2016 0.613558 15.0375 0.884322 15.1033 1.1525L18.9021 16.6303L11.521 2.55671C11.3927 2.31216 11.0905 2.21789 10.8459 2.34614C10.6014 2.4744 10.5071 2.77662 10.6354 3.02117L18.0025 17.068L7.47443 5.14681C7.29164 4.93983 6.97567 4.92022 6.76868 5.10301C6.5617 5.2858 6.54209 5.60178 6.72489 5.80876L17.287 17.7686L4.18429 8.73279C3.95697 8.57603 3.64559 8.63323 3.48883 8.86056C3.33206 9.08788 3.38926 9.39926 3.61659 9.55602L16.6633 18.5532L1.83344 12.8995C1.57541 12.8011 1.28649 12.9306 1.18812 13.1886C1.08975 13.4466 1.21918 13.7355 1.47721 13.8339L16.3948 19.521L0.559469 17.6257C0.285284 17.5929 0.0364096 17.7886 0.00359327 18.0628C-0.029223 18.337 0.166445 18.5858 0.440631 18.6186L16.1788 20.5023L0.440083 22.4036C0.165934 22.4367 -0.0294598 22.6858 0.00365913 22.96C0.036778 23.2341 0.285868 23.4295 0.560017 23.3964L16.3777 21.4855L1.47721 27.1661C1.21918 27.2645 1.08975 27.5534 1.18812 27.8114C1.28649 28.0695 1.57541 28.1989 1.83344 28.1005L16.6631 22.4469L3.61659 31.4439C3.38926 31.6007 3.33206 31.9121 3.48883 32.1394C3.64559 32.3667 3.95697 32.4239 4.18429 32.2672L17.2871 23.2313L6.72489 35.1912C6.54209 35.3982 6.5617 35.7142 6.76868 35.897C6.97567 36.0798 7.29164 36.0602 7.47443 35.8532L18.0025 23.9319L10.6354 37.9789C10.5071 38.2234 10.6014 38.5256 10.8459 38.6539C11.0905 38.7822 11.3927 38.6879 11.521 38.4433L18.9021 24.3698L15.1033 39.8475C15.0375 40.1157 15.2016 40.3864 15.4697 40.4522C15.7379 40.5181 16.0087 40.354 16.0745 40.0858L19.8718 24.614L19.8895 40.5006C19.8898 40.7767 20.1139 41.0003 20.39 41C20.6662 40.9997 20.8898 40.7756 20.8895 40.4994L20.8718 24.6164L24.7041 40.0869C24.7705 40.3549 25.0416 40.5184 25.3097 40.452C25.5777 40.3856 25.7412 40.1145 25.6748 39.8464L21.8406 24.3684L29.2582 38.4442C29.387 38.6885 29.6894 38.7822 29.9337 38.6534C30.1779 38.5247 30.2716 38.2223 30.1429 37.978L22.7421 23.934L33.3041 35.8538C33.4872 36.0605 33.8032 36.0796 34.0099 35.8964C34.2166 35.7133 34.2357 35.3973 34.0526 35.1906L23.4543 23.23L36.595 32.2675C36.8225 32.424 37.1338 32.3664 37.2903 32.1389C37.4468 31.9114 37.3892 31.6001 37.1616 31.4436L24.0813 22.4475L38.945 28.1007C39.2031 28.1988 39.4919 28.0692 39.5901 27.8111C39.6883 27.553 39.5586 27.2642 39.3005 27.166L24.3648 21.4855L40.2185 23.3964C40.4926 23.4295 40.7417 23.234 40.7747 22.9598C40.8078 22.6857 40.6123 22.4366 40.3381 22.4036L24.5644 20.5023L40.3376 18.6187C40.6118 18.5859 40.8075 18.3371 40.7748 18.0629C40.742 17.7887 40.4932 17.593 40.219 17.6257L24.3477 19.5211L39.3005 13.834C39.5586 13.7359 39.6883 13.4471 39.5901 13.189C39.4919 12.9309 39.2031 12.8012 38.945 12.8994L24.0811 18.5526L37.1616 9.55638C37.3892 9.3999 37.4468 9.0886 37.2903 8.86107C37.1338 8.63355 36.8225 8.57596 36.595 8.73244L23.4544 17.7699L34.0526 5.80938C34.2357 5.6027 34.2166 5.2867 34.0099 5.10356C33.8032 4.92042 33.4872 4.93951 33.3041 5.14619L22.7421 17.0659L30.1429 3.02204C30.2716 2.77775 30.1779 2.47534 29.9337 2.3466C29.6894 2.21786 29.387 2.31154 29.2582 2.55584L21.8406 16.6317L25.6748 1.15355C25.7412 0.885509 25.5777 0.614392 25.3097 0.547994C25.0416 0.481596 24.7705 0.64506 24.7041 0.913101L20.8718 16.3836L20.8895 0.500555Z"
                     fill="black" />
             </svg>
-            <div class="flex flex-col max-xl:w-full">
-                <p class="text-2xl text-lime-500 font-bold ">Paweł Jeziorowski</p>
-                <p class="text-base text-gray-400 font-bold">FRONTEND DEVELOPER</p>
+            <div class="flex flex-col h-10 max-xl:w-full">
+                <p class="h-6 text-xl text-lime-500 font-bold ">Paweł Jeziorowski</p>
+                <p class="h-4 text-xs text-gray-400 font-bold">FRONTEND DEVELOPER</p>
             </div>
         </content>
         <content class="h-12 flex flex-row justify-items-center items-center gap-10 max-xl:hidden">
-            <button class="w-16 h-12 text-xl text-white font-bold hover:text-gray-400 duration-500 about--js"><a
+            <button class="w-16 h-5 text-base text-white font-bold hover:text-gray-400 duration-500 about--js"><a
                     href="#about"> About </a></button>
-            <button class="w-16 h-12 text-xl text-white font-bold hover:text-gray-400 duration-500 skills--js"><a
+            <button class="w-16 h-5 text-base text-white font-bold hover:text-gray-400 duration-500 skills--js"><a
                     href="#skills">Skills </a> </button>
-            <button class="w-16 h-12 text-xl text-white font-bold hover:text-gray-400 duration-500 projects--js"> <a
+            <button class="w-16 h-5 text-base text-white font-bold hover:text-gray-400 duration-500 projects--js"> <a
                     href="#projects"> Projects</a>
             </button>
             <button
-                class=" w-24 h-12 text-xl text-white font-bold flex flex-row gap-1 place-content-center items-center hover:text-gray-400 duration-500 resume--js">
-                <svg class="stroke-gray-400 " width="22" height="22" viewBox="0 0 22 22" fill="none"
+                class=" w-24 h-5 text-base text-white font-bold flex flex-row gap-1 place-content-center items-center hover:text-gray-400 duration-500 resume--js">
+                <svg class="stroke-gray-400 " width="20" height="20" viewBox="0 0 22 22" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M7 11L11 15M11 15L15 11M11 15V7M21 11C21 16.5228 16.5228 21 11 21C5.47715 21 1 16.5228 1 11C1 5.47715 5.47715 1 11 1C16.5228 1 21 5.47715 21 11Z"
@@ -39,20 +39,20 @@
                 </svg>
                 Resume</button>
             <button
-                class="bg-lime-500 w-32 h-12 text-xl text-black font-bold rounded-xl hover:bg-lime-700 duration-500 contact--js"><a
+                class="bg-lime-500 w-32 h-12 text-base text-black font-bold rounded-xl hover:bg-lime-700 duration-500 contact--js"><a
                     href="#contact"> Contact </a></button>
         </content>
     </section>
-    <section id="about" class="flex flex-row justify-between items-center px-16 py-16 max-w-maxW mx-auto max-xl:flex-col max-xl:px-4 max-xl:py-1 ">
-        <content class="h-80 flex flex-col max-xl:order-5 max-xl:h-96">
+    <section id="about" class="flex flex-row justify-between items-center py-16 gap-x-16 max-w-maxW mx-auto max-xl:flex-col max-xl:px-4 max-xl:py-1 ">
+        <content class=" flex flex-col max-xl:order-5 max-xl:h-96">
             <div class="mb-16 max-xl:mb-4">
                 <h1
-                    class=" w-47rem text-5xl text-white font-bold mb-4 max-xl:px-1 max-xl:py-1 max-xl:w-72 max-xl:text-2xl">
+                    class=" max-w-47rem text-5xl leading-extra1 text-white font-bold mb-4 max-xl:px-1 max-xl:py-1 max-xl:w-72 max-xl:text-2xl">
                     My name is Paweł and I'am an aspiring <span class="text-lime-500"> Frontend developer </span> and a
                     keen
                     Star Wars fan.
                 </h1>
-                <p class=" w-47rem text-2xl text-gray-400 max-xl:text-base max-xl:py-1 max-xl:w-72 ">
+                <p class=" max-w-47rem text-2xl text-gray-400 max-xl:text-base max-xl:py-1 max-xl:w-72 ">
                     You might be interested in checking the list of my <span class="text-white">skills.</span> Don't
                     forget to have a glimpse at my
                     <span class="text-white">projects.</span> I'm
@@ -63,7 +63,7 @@
                 <button id="toutch"
                     class="w-56 h-16 text-xl bg-lime-500 text-black hover:bg-lime-700 duration-500 font-bold rounded-2xl flex flex-row gap-1 place-content-center items-center toutch--js">
 
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="26" height="26" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M6.09436 11.2288C6.03221 10.8282 5.99996 10.4179 5.99996 10C5.99996 5.58172 9.60525 2 14.0526 2C18.4999 2 22.1052 5.58172 22.1052 10C22.1052 10.9981 21.9213 11.9535 21.5852 12.8345C21.5154 13.0175 21.4804 13.109 21.4646 13.1804C21.4489 13.2512 21.4428 13.301 21.4411 13.3735C21.4394 13.4466 21.4493 13.5272 21.4692 13.6883L21.8717 16.9585C21.9153 17.3125 21.9371 17.4895 21.8782 17.6182C21.8266 17.731 21.735 17.8205 21.6211 17.8695C21.4911 17.9254 21.3146 17.8995 20.9617 17.8478L17.7765 17.3809C17.6101 17.3565 17.527 17.3443 17.4512 17.3448C17.3763 17.3452 17.3245 17.3507 17.2511 17.3661C17.177 17.3817 17.0823 17.4172 16.893 17.4881C16.0097 17.819 15.0524 18 14.0526 18C13.6344 18 13.2237 17.9683 12.8227 17.9073M7.63158 22C10.5965 22 13 19.5376 13 16.5C13 13.4624 10.5965 11 7.63158 11C4.66668 11 2.26316 13.4624 2.26316 16.5C2.26316 17.1106 2.36028 17.6979 2.53955 18.2467C2.61533 18.4787 2.65322 18.5947 2.66566 18.6739C2.67864 18.7567 2.68091 18.8031 2.67608 18.8867C2.67145 18.9668 2.65141 19.0573 2.61134 19.2383L2 22L4.9948 21.591C5.15827 21.5687 5.24 21.5575 5.31137 21.558C5.38652 21.5585 5.42641 21.5626 5.50011 21.5773C5.5701 21.5912 5.67416 21.6279 5.88227 21.7014C6.43059 21.8949 7.01911 22 7.63158 22Z"
                             stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
@@ -71,7 +71,7 @@
                     <a href="#contact">Get in toutch </a>
                 </button>
                 <button id="known"
-                    class=" w-64 h-16 text-xl text-lime-500 hover:text-lime-700 duration-500 hover:stroke-lime-700 font-bold flex flex-row gap-1 place-content-center items-center border-gray-400 border-2 rounded-xl max-xl:my-4 known--js">
+                    class=" w-64 h-16 text-xl text-lime-500 hover:text-lime-700 duration-500 hover:stroke-lime-700 font-bold flex flex-row gap-1 place-content-center items-center border-gray-400 border-opacity-5 border-2 rounded-xl max-xl:my-4 known--js">
 
                     <svg class="stroke-lime-500 hover:text-lime-700 hover:stroke-lime-700 duration-500" width="24"
                         height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -85,21 +85,20 @@
             </div>
         </content>
         <img src="./image 213.png"
-            class="w-96 h-96 rounded-2xl rounded-tr-200 max-xl:px-4 max-xl:py-4 max-xl:w-72 max-xl:h-72">
+            class="max-w-26rem max-h-28.75rem rounded-2xl rounded-tr-200 max-xl:px-4 max-xl:py-4 max-xl:w-72 max-xl:h-72">
 
     </section>
-    <section id="skills" class="flex-row justify-between items-center px-16 py-16 max-w-maxW mx-auto max-xl:px-4 max-xl:pb-4 max-xl:pt-40 ">
+    <section id="skills" class="flex-row justify-between items-center py-16 max-w-maxW mx-auto max-xl:px-4 max-xl:pb-4 max-xl:pt-40 ">
 
         <div class="mb-20 flex flex-col max-xl:items-center max-xl:mb-5">
             <p class="w-48 h-6 text-xl text-gray-400 font-bold ">MY SKILLS</p>
             <p class="w-54rem text-4xl text-white max-xl:text-2xl max-xl:w-72 ">I've picked up some cool skills along
                 the way, and I'm excited to
-                share them with you. Check out what I can do below!</p>
+                share them with you. <br> Check out what I can do below!</p>
         </div>
-        <div class="flex flex-row justify-between items-center gap-4 max-xl:flex-col ">
-            <div
-                class="w-26.625rem h-39rem rounded-3xl flex flex-col backdrop-brightness-200 max-xl:w-72 max-xl:h-45rem">
-                <div class=" flex flex-col m-10 ">
+        <div class="flex flex-row justify-between items-center gap-4 max-xl:flex-col">
+            <div class="max-w-26rem h-40rem rounded-3xl flex flex-col backdrop-brightness-200 max-xl:w-72 max-xl:h-45rem">
+                <div class=" flex flex-col m-10">
                     <svg class=" fill-lime-500 stroke-lime-500 mb-20" width="180" height="180" viewBox="0 0 184 180"
                         fill="" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd"
@@ -110,10 +109,10 @@
                         fill="" xmlns="http://www.w3.org/2000/svg">
                         <rect width="336" height="2" fill="" />
                     </svg>
-                    <div class="text-white text-2xl font-bold my-4">
+                    <div class="text-white text-2xl h-8 font-bold my-4">
                         Working knowledge
                     </div>
-                    <div class="text-white text-sm">
+                    <div class="text-white text-sm h-4">
                         <ul class="mb-2">— Semantic HTML5</ul>
                         <ul class="mb-2">— Flexbox</ul>
                         <ul class="mb-2">— Markdown</ul>
@@ -126,8 +125,7 @@
                     </div>
                 </div>
             </div>
-            <div
-                class="w-26.625rem h-39rem rounded-3xl backdrop-brightness-200  flex flex-col max-xl:w-72 max-xl:h-45rem">
+            <div class="max-w-26rem h-40rem rounded-3xl backdrop-brightness-200  flex flex-col max-xl:w-72 max-xl:h-45rem">
                 <div class=" flex flex-col m-10 ">
                     <svg class=" fill-lime-500 stroke-lime-500 mb-20" width="183" height="182" viewBox="0 0 183 182"
                         fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -153,8 +151,7 @@
                     </div>
                 </div>
             </div>
-            <div
-                class="w-26.625rem h-39rem rounded-3xl backdrop-brightness-200  flex flex-col max-xl:w-72 max-xl:h-45rem">
+            <div class="max-w-26rem h-40rem rounded-3xl backdrop-brightness-200  flex flex-col max-xl:w-72 max-xl:h-45rem">
                 <div class=" flex flex-col m-10 ">
                     <svg class=" fill-lime-500 stroke-lime-500 mb-20" width="181" height="184" viewBox="0 0 181 184"
                         fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -187,8 +184,8 @@
 
 
     </section>
-    <section id="projects" class="flex-row justify-between items-center px-2 py-16 max-w-maxW mx-auto max-xl:px-4 max-xl:py-4 ">
-        <div class="mb-20 flex flex-col justify-between max-xl:items-center max-xl:mb-5">
+    <section id="projects" class="flex-row justify-between items-center py-16 max-w-maxW mx-auto max-xl:px-4 max-xl:py-4 ">
+        <div class="flex flex-col justify-between max-xl:items-center max-xl:mb-5">
             <p class="w-48 h-6 text-xl text-gray-400 font-bold max-xl:text-xl max-xl:w-72">RECENT PROJECTS</p>
             <p class="w-54rem text-4xl text-white mb-20 max-xl:mb-5 max-xl:text-2xl max-xl:w-72">Since diving into
                 frontend development in 2023, I've brought a
@@ -199,10 +196,10 @@
         </div>
 
     </section>
-    <section id="resume" class="flex-row justify-between items-center px-16 py-16 max-w-maxW mx-auto max-xl:px-4 max-xl:py-4 " >
+    <section id="resume" class="flex-row justify-between items-center py-16 max-w-maxW mx-auto max-xl:px-4 max-xl:py-4 " >
         <div class="mb-20 flex flex-col max-xl:items-center max-xl:mb-5">
             <p class="w-48 h-6 text-xl text-gray-400 font-bold ">AFTER HOURS</p>
-            <p class="w-54rem text-4xl text-white mb-20 max-xl:mb-5 max-xl:text-2xl max-xl:w-72">Outside of my regular
+            <p class="w-54rem text-4xl text-white max-xl:mb-5 max-xl:text-2xl max-xl:w-72">Outside of my regular
                 working hours, I delve into an array of
                 activities and passions. Here's a glimpse into how I spend my after-hours.</p>
 
@@ -235,7 +232,7 @@
         </div>
 
     </section>
-    <section id="contact" class="flex-row justify-between items-center px-16 py-16 max-w-maxW mx-auto max-xl:px-4 max-xl:py-4 ">
+    <section id="contact" class="flex-row justify-between items-center py-16 max-w-maxW mx-auto max-xl:px-4 max-xl:py-4 ">
         <div class="flex flex-col items-center">
             <p class="text-white font-bold text-4xl mb-4 max-xl:text-3xl">Let's work together</p>
             <p class="text-gray-400 text-2xl max-xl:text-base">I'm open for new opportunities. </p>
