add site visibilty info

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Portfolio forntendowe Pawła Jeziorowskiego">
+    <meta property="og:title" content="Paweł Jeziorowski - portfolio">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://jeziorowskipawelporfolio.netlify.app/">
+    <meta property="og:image" content="./images/og.png">
     <title>Paweł Jeziorowski - portfolio</title>
     <link href="./index.css" type="text/css" rel="stylesheet" />
+    <link rel="icon" href="./images/favicon.ico">
   </head>
 
-  <body class="bg-black">
+  <body class="bg-background">
     <section
       class="flex flex-row justify-between items-center py-6 max-w-maxW mx-auto max-xl:px-4 max-xl:py-6 max-xl:w-72"
     >
@@ -151,7 +157,7 @@
         </div>
       </content>
       <img
-        src="./image 213.png"
+        src="./images/image 213.png"
         class="max-w-26rem max-h-28.75rem rounded-2xl rounded-tr-200 max-xl:px-4 max-xl:py-4 max-xl:w-72 max-xl:h-72"
       />
     </section>
@@ -390,7 +396,7 @@
         <div class="w-80 max-xl:w-72">
           <img
             class="mb-4"
-            src="./Frame 16.png"
+            src="./images/Frame 16.png"
             class="w-80 h-480px rounded-2xl"
           />
           <p class="text-2xl font-bold text-white">Electronic Music</p>
@@ -402,7 +408,7 @@
         <div class="w-80 max-xl:w-72">
           <img
             class="mb-4"
-            src="./Frame 17.png"
+            src="./images/Frame 17.png"
             class="w-80 h-480px rounded-2xl"
           />
           <p class="text-2xl font-bold text-white">Electronic Music</p>
@@ -414,7 +420,7 @@
         <div class="w-80 max-xl:w-72">
           <img
             class="mb-4"
-            src="./Frame 18.png"
+            src="./images/Frame 18.png"
             class="w-80 h-480px rounded-2xl"
           />
           <p class="text-2xl font-bold text-white">Electronic Music</p>
@@ -426,7 +432,7 @@
         <div class="w-80 max-xl:w-72">
           <img
             class="mb-4"
-            src="./Frame 19.png"
+            src="./images/Frame 19.png"
             class="w-80 h-480px rounded-2xl"
           />
           <p class="text-2xl font-bold text-white">Electronic Music</p>
