add accesibility improvment

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Portfolio forntendowe Pawła Jeziorowskiego">
+    <meta name="description" content="Forntend portfolio of Paweł Jeziorowski">
     <meta property="og:title" content="Paweł Jeziorowski - portfolio">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://jeziorowskipawelporfolio.netlify.app/">
     <meta property="og:image" content="./images/og.png">
+    <meta property="og:description" content="Forntend portfolio of Paweł Jeziorowski">
     <title>Paweł Jeziorowski - portfolio</title>
     <link href="./index.css" type="text/css" rel="stylesheet" />
     <link rel="icon" href="./images/favicon.ico">
@@ -205,38 +206,38 @@
             >
               <rect width="336" height="2" fill="" />
             </svg>
-            <div class="text-white text-2xl h-8 font-bold my-4">
+            <div class="text-white text-2xl font-bold my-4">
               Working knowledge
             </div>
-            <div class="text-white text-sm h-4">
-              <ul class="mb-2">
+            <ul class="text-white text-sm h-4">
+              <li class="mb-2">
                 — Semantic HTML5
-              </ul>
-              <ul class="mb-2">
+              </li>
+              <li class="mb-2">
                 — Flexbox
-              </ul>
-              <ul class="mb-2">
+              </li>
+              <li class="mb-2">
                 — Markdown
-              </ul>
-              <ul class="mb-2">
+              </li>
+              <li class="mb-2">
                 — JS:Local storage
-              </ul>
-              <ul class="mb-2">
+              </li>
+              <li class="mb-2">
                 — Figma
-              </ul>
-              <ul class="mb-2">
+              </li>
+              <li class="mb-2">
                 — CSS Grid
-              </ul>
-              <ul class="mb-2">
+              </li>
+              <li class="mb-2">
                 — Forms
-              </ul>
-              <ul class="mb-2">
+              </li>
+              <li class="mb-2">
                 — JS: DOM manipulations
-              </ul>
-              <ul class="mb-2">
+              </li>
+              <li class="mb-2">
                 — SASS
-              </ul>
-            </div>
+              </li>
+            </ul>
           </div>
         </div>
         <div
@@ -271,29 +272,29 @@
             <div class="text-white text-2xl font-bold my-4">
               Know something about
             </div>
-            <div class="text-white text-sm">
-              <ul class="mb-2">
+            <ul class="text-white text-sm">
+              <li class="mb-2">
                 — JavaScript ES6 + features
-              </ul>
-              <ul class="mb-2">
+              </li>
+              <li class="mb-2">
                 — CSS animations
-              </ul>
-              <ul class="mb-2">
+              </li>
+              <li class="mb-2">
                 — Working with API
-              </ul>
-              <ul class="mb-2">
+              </li>
+              <li class="mb-2">
                 — NPM Scripts
-              </ul>
-              <ul class="mb-2">
+              </li>
+              <li class="mb-2">
                 — PWA
-              </ul>
-              <ul class="mb-2">
+              </li>
+              <li class="mb-2">
                 — Git
-              </ul>
-              <ul class="mb-2">
+              </li>
+              <li class="mb-2">
                 — Accessibility
-              </ul>
-            </div>
+              </li>
+            </ul>
           </div>
         </div>
         <div
@@ -326,29 +327,29 @@
               <rect width="336" height="2" fill="" />
             </svg>
             <div class="text-white text-2xl font-bold my-4">Want to learn</div>
-            <div class="text-white text-sm">
-              <ul class="mb-2">
+            <ul class="text-white text-sm">
+              <li class="mb-2">
                 — React
-              </ul>
-              <ul class="mb-2">
+              </li>
+              <li class="mb-2">
                 — Node
-              </ul>
-              <ul class="mb-2">
+              </li>
+              <li class="mb-2">
                 — Electron
-              </ul>
-              <ul class="mb-2">
+              </li>
+              <li class="mb-2">
                 — SSR
-              </ul>
-              <ul class="mb-2">
+              </li>
+              <li class="mb-2">
                 — TypeScript
-              </ul>
-              <ul class="mb-2">
+              </li>
+              <li class="mb-2">
                 — Gatsby
-              </ul>
-              <ul class="mb-2">
+              </li>
+              <li class="mb-2">
                 — WebSockets
-              </ul>
-            </div>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
@@ -396,6 +397,7 @@
         <div class="w-80 max-xl:w-72">
           <img
             class="mb-4"
+            alt=""
             src="./images/Frame 16.png"
             class="w-80 h-480px rounded-2xl"
           />
@@ -420,6 +422,7 @@
         <div class="w-80 max-xl:w-72">
           <img
             class="mb-4"
+            alt=""
             src="./images/Frame 18.png"
             class="w-80 h-480px rounded-2xl"
           />
@@ -432,6 +435,7 @@
         <div class="w-80 max-xl:w-72">
           <img
             class="mb-4"
+            alt=""
             src="./images/Frame 19.png"
             class="w-80 h-480px rounded-2xl"
           />
@@ -494,7 +498,9 @@
             class="group w-14 h-14 rounded-full bg-gradient-to-br from-white/10 to-white/5 shadow-shadowproject hover:bg-gradient-to-br hover:from-white/20 hover:to-white/10 duration-700 flex flex-col justify-center items-center git--js"
           >
             <a
-              href="https://github.com/"
+              href="https://github.com/PawelJeziorowski/"
+              width="24" height="24"
+              alt="Paweł Jeziowski Github"
               target="_blank"
               rel="noopener noreferrer"
             >
@@ -537,7 +543,9 @@
             class="group w-14 h-14 rounded-full bg-gradient-to-br from-white/10 to-white/5 hover:bg-gradient-to-br hover:from-white/20 hover:to-white/10 duration-700 shadow-shadowproject flex flex-col justify-center items-center linkedin--js"
           >
             <a
+            alt="Paweł Jeziowski Linkedin"
               href="https://linkedin.com/"
+              width="24" height="24"
               target="_blank"
               rel="noopener noreferrer"
             >
@@ -560,7 +568,9 @@
             class="group w-14 h-14 rounded-full bg-gradient-to-br from-white/10 to-white/5 hover:bg-gradient-to-br hover:from-white/20 hover:to-white/10 duration-700  shadow-shadowproject flex flex-col justify-center items-center facebook--js"
           >
             <a
+            alt="Paweł Jeziowski Facebook"
               href="https://facebook.com/"
+              width="24" height="24"
               target="_blank"
               rel="noopener noreferrer"
             >
@@ -583,7 +593,9 @@
             class="group w-14 h-14 rounded-full bg-gradient-to-br from-white/10 to-white/5 shadow-shadowproject hover:bg-gradient-to-br hover:from-white/20 hover:to-white/10 duration-700  flex flex-col justify-center items-center instagram--js"
           >
             <a
+            alt="Paweł Jeziowski Instagram"
               href="https://instagram.com/"
+              width="24" height="24"
               target="_blank"
               rel="noopener noreferrer"
             >
@@ -609,7 +621,10 @@
           <div
             class="group w-14 h-14 rounded-full bg-gradient-to-br from-white/10 to-white/5 shadow-shadowproject hover:bg-gradient-to-br hover:from-white/20 hover:to-white/10 duration-700 flex flex-col justify-center items-center twitter--js"
           >
-            <a href="https://x.com/" target="_blank" rel="noopener noreferrer">
+            <a alt="Paweł Jeziowski X" 
+            width="24" height="24"
+            href="https://x.com/" 
+            target="_blank" rel="noopener noreferrer">
               <svg
                 class="group w-6 h-6 stroke-gray-400 fill-gray-400 group-hover:stroke-white group-hover:fill-white duration-700"
                 width="24"
