bug fixes, perfomers and acsessibility

--- a/src/index.html
+++ b/src/index.html
@@ -158,6 +158,8 @@
         </div>
       </content>
       <img
+      width="416" height="460"
+      alt=""
         src="./images/image 213.png"
         class="max-w-26rem max-h-28.75rem rounded-2xl rounded-tr-200 max-xl:px-4 max-xl:py-4 max-xl:w-72 max-xl:h-72"
       />
@@ -398,6 +400,7 @@
           <img
             class="mb-4"
             alt=""
+            width="320" height="480"
             src="./images/Frame 16.png"
             class="w-80 h-480px rounded-2xl"
           />
@@ -410,6 +413,8 @@
         <div class="w-80 max-xl:w-72">
           <img
             class="mb-4"
+            width="320" height="480"
+            alt=""
             src="./images/Frame 17.png"
             class="w-80 h-480px rounded-2xl"
           />
@@ -422,6 +427,7 @@
         <div class="w-80 max-xl:w-72">
           <img
             class="mb-4"
+            width="320" height="480"
             alt=""
             src="./images/Frame 18.png"
             class="w-80 h-480px rounded-2xl"
@@ -435,6 +441,7 @@
         <div class="w-80 max-xl:w-72">
           <img
             class="mb-4"
+            width="320" height="480"
             alt=""
             src="./images/Frame 19.png"
             class="w-80 h-480px rounded-2xl"
@@ -499,6 +506,7 @@
           >
             <a
               href="https://github.com/PawelJeziorowski/"
+              aria-label="Paweł Jeziowski Github"
               width="24" height="24"
               alt="Paweł Jeziowski Github"
               target="_blank"
@@ -544,6 +552,7 @@
           >
             <a
             alt="Paweł Jeziowski Linkedin"
+            aria-label="Paweł Jeziowski Linkedin"
               href="https://linkedin.com/"
               width="24" height="24"
               target="_blank"
@@ -569,6 +578,7 @@
           >
             <a
             alt="Paweł Jeziowski Facebook"
+            aria-label="Paweł Jeziowski Facebook"
               href="https://facebook.com/"
               width="24" height="24"
               target="_blank"
@@ -594,6 +604,7 @@
           >
             <a
             alt="Paweł Jeziowski Instagram"
+            aria-label="Paweł Jeziowski Instagram"
               href="https://instagram.com/"
               width="24" height="24"
               target="_blank"
@@ -621,7 +632,8 @@
           <div
             class="group w-14 h-14 rounded-full bg-gradient-to-br from-white/10 to-white/5 shadow-shadowproject hover:bg-gradient-to-br hover:from-white/20 hover:to-white/10 duration-700 flex flex-col justify-center items-center twitter--js"
           >
-            <a alt="Paweł Jeziowski X" 
+            <a alt="Paweł Jeziowski X"
+            aria-label="Paweł Jeziowski X" 
             width="24" height="24"
             href="https://x.com/" 
             target="_blank" rel="noopener noreferrer">
