--- a/src/index.html
+++ b/src/index.html
@@ -158,7 +158,7 @@
         </div>
       </content>
       <img
-      width="416" height="460"
+      width="416" height="459"
       alt=""
         src="./images/image 213.png"
         class="max-w-26rem max-h-28.75rem rounded-2xl rounded-tr-200 max-xl:px-4 max-xl:py-4 max-xl:w-72 max-xl:h-72"
@@ -468,11 +468,11 @@
         <p class="text-gray-400 text-2xl mb-16 max-xl:text-base max-xl:mb-10">
           If you have one for me we should talk!
         </p>
-        <button
+        <a href="mailto:jeziorowski.pawel.pj@gmail.com"
           id="mail"
           class="p-4 text-xl bg-lime-500 hover:bg-lime-700 duration-700 text-black font-bold rounded-2xl flex flex-row gap-1 place-content-center items-center mb-10 max-xl:mb-10 mail--js"
         >
-          <a href="mailto:jeziorowski.pawel.pj@gmail.com">
+          <p >
             <div
               class="flex flex-row items-center flex-wrap justify-center gap-2"
             >
@@ -493,8 +493,8 @@
               </svg>
               jeziorowski.pawel.pj@gmail.com
             </div>
-          </a>
-        </button>
+          </p>
+        </a>
       </div>
       <div class="flex flex-col items-center">
         <p class="text-gray-400 text-2xl mb-6 max-xl:text-xl">or find me on</p>
