--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   <body class="bg-background">
     
     <section
-      class=" py-6 sticky top-0 bg-background/50 backdrop-blur-lg max-xl:px-4 "
+      class=" py-6  max-xl:py-3 sticky top-0 bg-background/50 backdrop-blur-lg max-xl:px-4 "
     >
     <div class="flex flex-row justify-between items-center max-w-maxW mx-auto max-xl:w-72">
       <content class="flex flex-row items-center max-xl:justify-between gap-4">
