add button improvements

--- a/src/index.html
+++ b/src/index.html
@@ -44,22 +44,22 @@
       <content
         class="h-12 flex flex-row justify-items-center items-center gap-10 max-xl:hidden"
       >
-        <button
+        <a href="#about"
           class="w-16 h-5 text-base text-white font-bold hover:text-gray-400 duration-500 about--js"
         >
-          <a href="#about"> About </a>
-        </button>
-        <button
+          <p > About </p>
+    </a>
+        <a href="#skills"
           class="w-16 h-5 text-base text-white font-bold hover:text-gray-400 duration-500 skills--js"
         >
-          <a href="#skills">Skills </a>
-        </button>
-        <button
+          <p >Skills </p>
+      </a>
+        <a href="#projects"
           class="w-16 h-5 text-base text-white font-bold hover:text-gray-400 duration-500 projects--js"
         >
-          <a href="#projects"> Projects</a>
-        </button>
-        <button
+          <p > Projects</p>
+      </a>
+        <a
           class="w-24 h-5 text-base text-white font-bold flex flex-row gap-1 place-content-center items-center hover:text-gray-400 duration-500 resume--js"
         >
           <svg
@@ -79,12 +79,12 @@
             />
           </svg>
           Resume
-        </button>
-        <button
-          class="bg-lime-500 w-32 h-12 text-base text-black font-bold rounded-xl hover:bg-lime-700 duration-500 contact--js"
+        </a>
+        <a href="#contact"
+          class="flex justify-center items-center bg-lime-500 w-32 h-12 text-base text-black font-bold rounded-xl hover:bg-lime-700 duration-500 contact--js"
         >
-          <a href="#contact"> Contact </a>
-        </button>
+          <p> Contact </p>
+      </a>
       </content>
     </div>
     </section>
@@ -106,10 +106,10 @@
             class="max-w-47rem text-2xl text-gray-400 max-xl:text-base max-xl:py-1 max-xl:w-72"
           >
             You might be interested in checking the list of my
-            <span class="text-white">skills.</span> Don't forget to have a
-            glimpse at my <span class="text-white">projects.</span> I'm looking
+            <a class="text-white " href="#skills">skills.</a> Don't forget to have a
+            glimpse at my <a class="text-white" href="#projects">projects.</a> I'm looking
             for a new challenges so if you have one -
-            <span class="text-white">contact me</span> 😊
+            <a class="text-white" href="#contact">contact me</a> 😊
           </p>
         </div>
         <div
