--- a/src/index.html
+++ b/src/index.html
@@ -279,7 +279,7 @@
           If you have one for me we should talk!
         </p>
         <a href="mailto:jeziorowski.pawel.pj@gmail.com" id="mail"
-          class="p-4 text-xl bg-lime-500 hover:bg-lime-700 duration-700 text-black font-bold rounded-2xl flex flex-row gap-1 place-content-center items-center mb-10 max-xl:mb-10 mail--js">
+          class="p-4 text-xl bg-sky-400 hover:bg-sky-600 duration-700 text-black font-bold rounded-2xl flex flex-row gap-1 place-content-center items-center mb-10 max-xl:mb-10 mail--js">
           <p>
             <div class="flex flex-row items-center flex-wrap justify-center gap-2">
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
