--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   <section class=" py-6  max-xl:py-3 sticky top-0 bg-background/50 backdrop-blur-lg max-xl:px-4 ">
     <div class="flex flex-row justify-between items-center max-w-maxW mx-auto max-xl:w-72">
       <content class="flex flex-row items-center max-xl:justify-between gap-4">
-        <img class="animate-spin-slow w-10 h-10" width="40" height="40" src="./images/union.svg"></img>
+        <img class="animate-spin-slow w-10 h-10" width="40" height="40" src="./images/Union.svg"></img>
         <div class="flex flex-col h-10 max-xl:w-full">
           <p class="h-6 text-xl text-sky font-bold text-sky-400">Paweł Jeziorowski</p>
           <p class="h-4 text-xs text-gray-400 font-bold">FRONTEND DEVELOPER</p>
