add description personal information

--- a/src/index.html
+++ b/src/index.html
@@ -57,8 +57,7 @@
           <h1
             class="max-w-47rem text-5xl leading-extra1 text-white font-bold mb-4 max-xl:px-1 max-xl:py-1 max-xl:w-72 max-xl:text-2xl">
             My name is Paweł and I'am an aspiring
-            <span class="text-sky-400"> Frontend developer </span> and a keen
-            Star Wars fan.
+            <span class="text-sky-400"> Frontend developer </span> and and I'm interested in history.
           </h1>
           <p class="max-w-47rem text-2xl text-gray-400 max-xl:text-base max-xl:py-1 max-xl:w-72">
             You might be interested in checking the list of my
@@ -100,7 +99,7 @@
       </div>
       <div class="flex flex-row justify-between items-center gap-4 max-xl:flex-col">
         <div
-          class="max-w-26rem h-40rem rounded-3xl flex flex-col bg-gradient-to-br from-white/10 to-white/5 shadow-shadowproject ring-1 ring-inset ring-background max-xl:w-72 max-xl:h-45rem">
+          class="max-w-26rem h-42rem rounded-3xl flex flex-col bg-gradient-to-br from-white/10 to-white/5 shadow-shadowproject ring-1 ring-inset ring-background max-xl:w-72 max-xl:h-45rem">
           <div class="flex flex-col m-10">
             <img class="mb-20 w-44" src="./images/Frame 298.svg" width="176" height="176"></img>
 
@@ -136,11 +135,14 @@
               <li class="mb-2">
                 — SASS
               </li>
+              <li class="mb-2">
+                — Tailwind
+              </li>
             </ul>
           </div>
         </div>
         <div
-          class="max-w-26rem h-40rem rounded-3xl bg-gradient-to-br from-white/10 to-white/5 shadow-shadowproject ring-1 ring-inset ring-background flex flex-col max-xl:w-72 max-xl:h-45rem">
+          class="max-w-26rem h-42rem rounded-3xl bg-gradient-to-br from-white/10 to-white/5 shadow-shadowproject ring-1 ring-inset ring-background flex flex-col max-xl:w-72 max-xl:h-45rem">
           <div class="flex flex-col m-10">
             <img class="mb-20 w-44" src="./images/Frame 299.svg" width="176" height="176"></img>
             <div class="border border-sky-400 w-336px h-0.5 max-xl:w-52"></div>
@@ -173,7 +175,7 @@
           </div>
         </div>
         <div
-          class="max-w-26rem h-40rem rounded-3xl bg-gradient-to-br from-white/10 to-white/5 shadow-shadowproject ring-1 ring-inset ring-background flex flex-col max-xl:w-72 max-xl:h-45rem">
+          class="max-w-26rem h-42rem rounded-3xl bg-gradient-to-br from-white/10 to-white/5 shadow-shadowproject ring-1 ring-inset ring-background flex flex-col max-xl:w-72 max-xl:h-45rem">
           <div class="flex flex-col m-10">
             <img class="mb-20 w-44" src="./images/Frame 300.svg" width="176" height="176"></img>
             <div class="border border-sky-400 w-336px h-0.5 max-xl:w-52"></div>
@@ -228,41 +230,37 @@
           after-hours.
         </p>
       </div>
-      <div class="flex flex-row gap-4 justify-between items-center max-xl:flex-col">
+      <div class="flex flex-row gap-4 justify-between items-top max-xl:flex-col">
         <div class="w-80 max-xl:w-72">
           <img class="mb-4" alt="" width="320" height="480" src="./images/Frame 16.png"
             class="w-80 h-480px rounded-2xl" />
-          <p class="text-2xl font-bold text-white">Electronic Music</p>
+          <p class="text-2xl font-bold text-white">Symphonic Metal Music</p>
           <p class="text-base text-gray-400">
-            Outside of my regular working hours, I immerse myself in the
-            pulsating rhythms and innovative sounds of electronic music
+            I am passionate about symphonic metal, a&nbspcombination of the power of metal and classical music, which influences my work, me to explore complex sounds and emotions.
           </p>
         </div>
         <div class="w-80 max-xl:w-72">
           <img class="mb-4" width="320" height="480" alt="" src="./images/Frame 17.png"
             class="w-80 h-480px rounded-2xl" />
-          <p class="text-2xl font-bold text-white">Electronic Music</p>
+          <p class="text-2xl font-bold text-white">Historical reconstruction</p>
           <p class="text-base text-gray-400">
-            In a galaxy not so far away, my leisure time is often spent
-            exploring the intricate lore and captivating tales of Star Wars.
+            I am a member of a historical reconstruction group recreating the early medieval period, where I actively participate in bringing history to life by recreating events and daily life from bygone eras.
           </p>
         </div>
         <div class="w-80 max-xl:w-72">
           <img class="mb-4" width="320" height="480" alt="" src="./images/Frame 18.png"
             class="w-80 h-480px rounded-2xl" />
-          <p class="text-2xl font-bold text-white">Electronic Music</p>
+          <p class="text-2xl font-bold text-white">Video Games</p>
           <p class="text-base text-gray-400">
-            Lost in virtual realms, I find joy and challenge in the dynamic
-            world of video games.
+            Lost in virtual realms, I find joy and challenge in the dynamic world of video games.
           </p>
         </div>
         <div class="w-80 max-xl:w-72">
           <img class="mb-4" width="320" height="480" alt="" src="./images/Frame 19.png"
             class="w-80 h-480px rounded-2xl" />
-          <p class="text-2xl font-bold text-white">Electronic Music</p>
+          <p class="text-2xl font-bold text-white">Strength Training</p>
           <p class="text-base text-gray-400">
-            Empowering both body and mind, I'm dedicated to the discipline of
-            strength training, continuously pushing my limits.
+            Empowering both body and mind, I'm dedicated to the discipline of strength training, continuously pushing my limits.
           </p>
         </div>
       </div>
